[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/freefantasygui/png/Estrella.png" type="Texture" id=1]
[ext_resource path="res://assets/freefantasygui/png/PanelInformation.png" type="Texture" id=2]
[ext_resource path="res://assets/freefantasygui/png/PanelRecord.png" type="Texture" id=3]
[ext_resource path="res://assets/freefantasygui/png/RetryWinner.png" type="Texture" id=4]
[ext_resource path="res://assets/freefantasygui/png/LuzCorona.png" type="Texture" id=5]
[ext_resource path="res://assets/freefantasygui/png/EstrellaNoCompletaWinner.png" type="Texture" id=6]
[ext_resource path="res://assets/freefantasygui/png/Start.png" type="Texture" id=7]
[ext_resource path="res://assets/Arcane Nine.otf" type="DynamicFontData" id=8]
[ext_resource path="res://script/LevelWinner.gd" type="Script" id=9]

[sub_resource type="DynamicFont" id=2]
size = 68
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[sub_resource type="ShaderMaterial" id=4]

[sub_resource type="DynamicFont" id=5]
size = 77
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=6]
size = 53
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[node name="LevelWinnerTwoStar" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
script = ExtResource( 9 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -255.0
margin_top = -545.0
margin_right = 321.0
margin_bottom = -274.0
texture = ExtResource( 5 )

[node name="Panel" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -441.0
margin_top = -350.0
margin_right = 1107.0
margin_bottom = 1054.0
rect_scale = Vector2( 0.6, 0.5 )
texture = ExtResource( 2 )
expand = true

[node name="Label" type="Label" parent="."]
margin_left = -96.0
margin_top = -338.0
margin_right = 148.0
margin_bottom = -260.0
custom_fonts/font = SubResource( 2 )
text = "YOU WIN!"

[node name="StarOne" type="TextureRect" parent="."]
material = SubResource( 4 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -371.0
margin_top = -171.0
margin_right = 57.0
margin_bottom = 93.0
rect_scale = Vector2( 0.5, 0.5 )
rect_clip_content = true
texture = ExtResource( 1 )
expand = true

[node name="StarTwo" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -110.0
margin_top = -210.0
margin_right = 318.0
margin_bottom = 54.0
rect_scale = Vector2( 0.5, 0.5 )
rect_clip_content = true
texture = ExtResource( 1 )
expand = true

[node name="StarThree" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 167.0
margin_top = -173.0
margin_right = 595.0
margin_bottom = 91.0
rect_scale = Vector2( 0.5, 0.5 )
rect_clip_content = true
texture = ExtResource( 6 )
expand = true

[node name="RecordActual" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 84.0
margin_top = 20.0
margin_right = 356.0
margin_bottom = 106.0
rect_scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 3 )

[node name="RecordTitle" type="Label" parent="RecordActual"]
margin_left = -457.143
margin_right = -222.143
margin_bottom = 88.0
custom_fonts/font = SubResource( 5 )
text = "Record"

[node name="Record" type="Label" parent="RecordActual"]
margin_left = 121.429
margin_top = 14.2858
margin_right = 272.429
margin_bottom = 78.2858
custom_fonts/font = SubResource( 6 )

[node name="Score" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 84.0
margin_top = 100.0
margin_right = 356.0
margin_bottom = 186.0
rect_scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 3 )

[node name="RecordTitle" type="Label" parent="Score"]
margin_left = -457.143
margin_right = -222.143
margin_bottom = 88.0
custom_fonts/font = SubResource( 5 )
text = "Score"

[node name="Score" type="Label" parent="Score"]
margin_left = 121.429
margin_top = 14.2858
margin_right = 272.429
margin_bottom = 78.2858
custom_fonts/font = SubResource( 6 )

[node name="VBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -139.0
margin_top = 221.0
margin_right = 401.0
margin_bottom = 437.0
rect_scale = Vector2( 0.6, 0.6 )
custom_constants/separation = 158

[node name="Retry" type="Button" parent="VBoxContainer"]
pause_mode = 2
margin_right = 188.0
margin_bottom = 216.0
icon = ExtResource( 4 )
flat = true

[node name="Next" type="Button" parent="VBoxContainer"]
pause_mode = 2
margin_left = 346.0
margin_right = 540.0
margin_bottom = 216.0
icon = ExtResource( 7 )
flat = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.8

[node name="SFX" type="AudioStreamPlayer" parent="."]

[connection signal="pressed" from="VBoxContainer/Retry" to="." method="_on_Retry_pressed"]
[connection signal="pressed" from="VBoxContainer/Next" to="." method="_on_Next_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
